--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,13 @@
 /* app css stylesheet */
 
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+.sidebar-nav {
+  padding: 9px 0;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
